国際化完了しました。

--- a/src/com/internousdev/template/property/appliDetail_ja.properties
+++ b/src/com/internousdev/template/property/appliDetail_ja.properties
@@ -1,2 +1,5 @@
 lang.appliDetail.price=\u4FA1\u683C
 lang.appliDetail.descriptionOfItem=\u8A73\u7D30
+lang.appliDetail.appliDetail=\u5546\u54C1\u8A73\u7D30
+lang.appliDetail.buy=\u8CFC\u5165\u3059\u308B
+lang.appliDetail.backToAppliList=\u5546\u54C1\u4E00\u89A7\u3078\u623B\u308B
